# aiux

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.claude/hooks/: block-sensitive.sh
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: main.rs
core/: Cargo.toml
core/src/: brainstem.rs  bus.rs  config.rs  core.rs  events.rs  history.rs  home.rs  main.rs  memory.rs  mqtt.rs  preamble.rs  repl.rs
core/src/agent/: cortex.rs  hippocampus.rs  mod.rs  neocortex.rs
core/src/bus/: events.rs  mod.rs
core/src/tools/: memory.rs  mod.rs  scheduler.rs  shell.rs  soul.rs  user.rs
docs/: ABWEICHUNGEN.md  ARCHITECTURE.md  EVENT-BUS.md  PRD.md  ROADMAP.md  TESTING.md  TOOO.md
home/: config.toml
home/.system/: compact-preamble.md  config.toml  tool-memory.md  tool-soul.md  tool-user.md
home/memory/: soul.md  user.md
home/nerves/system-monitor/: interpret.rhai  manifest.toml
home/nerves/test-nerve/: channels.toml  interpret.rhai  manifest.toml
hooks/: commit-msg  install.sh  pre-commit  pre-push
hub/: Cargo.toml
hub/src/: main.rs
nerve/: Cargo.toml
nerve/shared/: Cargo.toml
nerve/shared/src/: lib.rs  mqtt.rs  registration.rs
nerve/src/: main.rs
nerve/system/: Cargo.toml
nerve/system/src/: main.rs
scripts/: deploy.sh  first-llm-call.sh  install.sh  setup-local.sh
system/aichat/: config.example.yaml
