[package]
name = "aiux-agent"
version = "0.1.0"
edition = "2021"
description = "AIUX LLM Agent - Kooperativer KI-Co-Pilot"
license = "MIT"

# Dependencies kommen in Phase 2
# [dependencies]
# llm = "1.3"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
