[package]
name = "aiux-core"
version = "0.1.0"
edition = "2021"
description = "AIUX Core - LLM Agent mit Persoenlichkeit"
license = "MIT"

[dependencies]
rig-core = "0.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
futures = "0.3"
chrono = "0.4"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
