[package]
name = "nerve-system"
version = "0.1.0"
edition = "2021"
description = "AIUX Nerve: System-Monitor (CPU, RAM, Disk, Temperatur)"

[dependencies]
nerve-shared = { path = "../shared" }
sysinfo = "0.33"
rumqttc = "0.24"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
